# introspection-python-sdk

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  ty.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  examples.yml  publish.yml  release-tag.yml  tag.yml
docs/: advanced.md  otel.md
examples/: .env.example  README.md  pyproject.toml  run_all.sh
examples/introspection_examples/: __init__.py  tasks_files.py
examples/introspection_examples/anthropic_sdk/: anthropic_init.py  anthropic_langfuse_init.py  anthropic_langsmith_init.py  anthropic_native.py
examples/introspection_examples/api/: __init__.py  async_runtimes.py  runtime_resolution.py  runtimes.py  service_account.py
examples/introspection_examples/claude_agent/: claude_arize.py  claude_braintrust.py  claude_langfuse.py  claude_langsmith.py  claude_logfire.py
examples/introspection_examples/gemini_sdk/: gemini_arize_init.py  gemini_init.py  gemini_native.py
examples/introspection_examples/langchain_langgraph/: handler.py
examples/introspection_examples/logfire_examples/: anthropic_example.py  openai_braintrust_example.py  openai_example.py  openai_langfuse_example.py
examples/introspection_examples/openai_agents/: agents_arize.py  agents_braintrust.py  agents_braintrust_init.py  agents_langfuse.py  agents_langsmith.py  example.py  responses_api_features.py
examples/introspection_examples/openinference/: anthropic_arize.py  anthropic_braintrust.py  anthropic_langfuse.py  openai_arize.py  openai_braintrust.py  openai_langfuse.py
examples/introspection_examples/otel/: __init__.py  run_all.sh
examples/introspection_examples/otel/anthropic_sdk/: anthropic_init.py  anthropic_langfuse_init.py  anthropic_langsmith_init.py  anthropic_native.py
examples/introspection_examples/otel/claude_agent/: claude_arize.py  claude_braintrust.py  claude_langfuse.py  claude_langsmith.py  claude_logfire.py
examples/introspection_examples/otel/gemini_sdk/: gemini_arize_init.py  gemini_init.py  gemini_native.py
examples/introspection_examples/otel/langchain_langgraph/: handler.py
examples/introspection_examples/otel/logfire_examples/: anthropic_example.py  openai_braintrust_example.py  openai_example.py  openai_langfuse_example.py
examples/introspection_examples/otel/openai_agents/: agents_arize.py  agents_braintrust.py  agents_braintrust_init.py  agents_langfuse.py  agents_langsmith.py  example.py  responses_api_features.py
examples/introspection_examples/otel/openinference/: anthropic_arize.py  anthropic_braintrust.py  anthropic_langfuse.py  openai_arize.py  openai_braintrust.py  openai_langfuse.py
introspection_sdk/: __init__.py  _backoff.py  _errors.py  _http.py  _retry.py  anthropic.py  auth.py  client.py  config.py  pagination.py  resumable.py  runner.py  streaming.py  testing.py  types.py  utils.py
introspection_sdk/converters/: __init__.py  genai_to_openinference.py  logfire.py  openai.py  openinference.py
introspection_sdk/otel/: __init__.py  _termination.py  _usage.py  anthropic.py  conversation.py  gemini.py  logs.py  sessions.py  types.py
introspection_sdk/otel/integrations/: __init__.py  _provider.py  anthropic.py  base.py  claude_agent.py  gemini.py  langchain.py  openai_agents.py
introspection_sdk/otel/processors/: __init__.py  claude_tracing_processor.py  langchain_callback_handler.py  span_processor.py  tracing_processor.py
introspection_sdk/processors/: __init__.py  claude_tracing_processor.py  langchain_callback_handler.py  span_processor.py  tracing_processor.py
introspection_sdk/resources/: __init__.py  experiments.py  recipes.py  runtimes.py
introspection_sdk/runner_resources/: __init__.py  _reads.py  conversations.py  events.py  files.py  metrics.py  shares.py  tasks.py
introspection_sdk/schemas/: __init__.py  agui.py  conversations.py  events.py  experiments.py  files.py  genai.py  metrics.py  pagination.py  recipes.py  runner.py  runtimes.py  shares.py  tasks.py
introspection_sdk/testing/: claude_vcr.py  redaction.py
tests/: conftest.py  test_abort_cancellation.py  test_claude_tracing_processor.py  test_claude_tracing_shared.py  test_conversation.py  test_init.py  test_langchain_handler_direct.py  test_langchain_handler_shared.py  test_logs.py  test_sessions.py  test_span_processor.py  test_tracing_processor.py  test_tracing_processor_shared.py  test_usage_cost.py  testing.py
tests/framework/: conftest.py  test_anthropic.py  test_anthropic_thinking.py  test_claude_logfire.py  test_gemini.py  test_gemini_integration.py  test_gemini_thinking.py  test_langchain_handler.py  test_langgraph_subgraphs.py  test_openai_agent.py  test_openai_agent_handoffs.py  test_openai_chat_completions.py  test_openai_conversations.py  test_openai_responses.py  test_openai_responses_features.py  test_pydantic_ai.py
tests/framework/cassettes/test_anthropic/: test_anthropic_error_invalid_model.yaml  test_anthropic_image_input.yaml  test_anthropic_messages.yaml  test_anthropic_streaming.yaml  test_anthropic_tool_use.yaml
tests/framework/cassettes/test_anthropic_thinking/: test_anthropic_thinking_basic.yaml  test_anthropic_thinking_multi_turn.yaml  test_anthropic_thinking_streaming.yaml
tests/framework/cassettes/test_claude_logfire/: test_claude_logfire_dual_export.yaml
tests/observability/: conftest.py  test_arize.py  test_braintrust.py  test_claude_langsmith.py  test_langchain.py  test_langfuse.py  test_langsmith.py  test_openai_agents_langsmith.py  test_posthog.py
tests/rest/: conftest.py  test_async.py  test_auth.py  test_client.py  test_conversations.py  test_errors.py  test_events.py  test_experiments.py  test_files.py  test_http.py  test_metrics.py  test_pagination.py  test_recipes.py  test_resumable.py  test_runner.py  test_runtimes.py  test_shares.py  test_streaming.py  test_tasks.py
tests/test_converters/: test_genai_to_openinference.py  test_logfire.py  test_openai.py  test_openinference.py
tests/test_integrations/: test_base.py  test_loader.py  test_provider.py  test_shims.py
(+50 files in other folders)
