[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "introspection-sdk"
version = "0.1.0"
description = "Python SDK for Introspection — continuously improve your AI systems with production feedback and frontier practices"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "opentelemetry-sdk >= 1.39.0, < 1.42.0",
    "opentelemetry-exporter-otlp-proto-http>=1.39.0,<1.42.0",
    "openai>=2.30.0",
]

[project.optional-dependencies]
dev = ["pre-commit>=3.5.0", "ruff==0.14.14", "ty>=0.0.7"]
test = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.0",
    "pytest-dotenv>=0.5.2",
    "pytest-recording>=0.13.4",
    "pydantic>=2.12.0",
    "inline-snapshot>=0.31.0",
    "dirty-equals>=0.11.0",
    "responses>=0.25.8",
    "anthropic>=0.85.0",
    "pydantic-ai>=1.68.0",
    "openai-agents>=0.12.2",
    "claude-agent-sdk>=0.1.0,<=0.1.7",
    "posthog>=7.9.0",
]
openai-agents = ["openai-agents>=0.12.2"]
langfuse = ["langfuse>=3.0.0"]
arize = ["arize-phoenix>=8.0.0", "openinference-instrumentation-openai>=0.1.0"]
braintrust = ["braintrust[otel]>=0.1.0"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["introspection_sdk"]

[tool.hatch.build.targets.sdist]
include = ["/README.md", "/introspection_sdk"]

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: requires real API keys and makes live API calls",
]
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::DeprecationWarning:strawberry.*",
    "ignore::DeprecationWarning:lia.*",
    "ignore::DeprecationWarning:phoenix.*",
    "ignore::DeprecationWarning:pyasn1.*",
    "ignore::DeprecationWarning:langsmith.*",
    "ignore::pandas.errors.Pandas4Warning",
]

[tool.pytest_dotenv]
env_files = [".env"]

[dependency-groups]
dev = [
    "inline-snapshot[black]>=0.32.5",
]
