[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "introspection-sdk"
version = "0.5.0"
description = "Python SDK for Introspection — continuously improve your AI systems with production feedback and frontier practices"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
# Install with `pip install introspection-sdk[otel]` to enable the
# OpenTelemetry exporter, the span / tracing processors, the LLM SDK
# instrumentors (Anthropic / Gemini / Claude / LangChain), and the
# IntrospectionLogs (track / feedback / identify) surface. Default
# install is REST-only (client.runtimes / client.experiments / Runner
# / tasks / files).
otel = [
    "opentelemetry-sdk >= 1.39.0, < 1.43.0",
    "opentelemetry-exporter-otlp-proto-http>=1.39.0,<1.43.0",
    "openai>=2.30.0",
]
dev = ["pre-commit>=3.5.0", "ruff==0.14.14", "ty>=0.0.7"]
test = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.0",
    "pytest-dotenv>=0.5.2",
    "pytest-recording>=0.13.4",
    "pydantic>=2.12.0",
    "inline-snapshot>=0.31.0",
    "dirty-equals>=0.11.0",
    "responses>=0.25.8",
    "anthropic>=0.85.0",
    "google-genai>=1.0.0",
    "pydantic-ai>=1.68.0",
    "openai-agents>=0.12.2",
    "claude-agent-sdk>=0.1.0,<=0.1.7",
    "posthog>=7.9.0",
    "langchain-core>=1.0.0",
    "openinference-instrumentation-anthropic>=0.1.0",
    "openinference-instrumentation-openai-agents>=0.1.0",
]
# Per-framework convenience installs. init() auto-detects frameworks
# regardless of how they were installed; these extras are a one-command setup.
openai = ["openai>=2.0.0"]
anthropic = ["anthropic>=0.85.0"]
gemini = ["google-genai>=1.0.0"]
openai-agents = ["openai-agents>=0.12.2"]
claude-agent = ["claude-agent-sdk>=0.1.0,<=0.1.7"]
langchain = ["langchain-core>=0.3.0"]
logfire = ["logfire>=4.0.0"]
pydantic-ai = ["pydantic-ai>=1.68.0"]

# Dual-export to third-party observability platforms.
langfuse = ["langfuse>=3.0.0"]
arize = ["arize-phoenix>=8.0.0", "openinference-instrumentation-openai>=0.1.0"]
braintrust = ["braintrust[otel]>=0.1.0"]

# Convenience bundle for greenfield projects / CI smoke tests.
all = [
    "openai>=2.0.0",
    "anthropic>=0.85.0",
    "google-genai>=1.0.0",
    "openai-agents>=0.12.2",
    "claude-agent-sdk>=0.1.0,<=0.1.7",
    "langchain-core>=0.3.0",
    "logfire>=4.0.0",
    "pydantic-ai>=1.68.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["introspection_sdk"]

[tool.hatch.build.targets.sdist]
include = ["/README.md", "/introspection_sdk"]

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: requires real API keys and makes live API calls",
]
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::DeprecationWarning:strawberry.*",
    "ignore::DeprecationWarning:lia.*",
    "ignore::DeprecationWarning:phoenix.*",
    "ignore::DeprecationWarning:pyasn1.*",
    "ignore::DeprecationWarning:langsmith.*",
    "ignore::pandas.errors.Pandas4Warning",
]

[tool.coverage.run]
source = ["introspection_sdk"]
branch = true
omit = [
    "introspection_sdk/version.py",
    "introspection_sdk/__init__.py",
]

[tool.coverage.report]
# Ratchet: this floor moves up as new tests land. Do not lower it.
# Temporarily relaxed from 70 → 60 to land the REST + OTel split; ratchet
# back up as coverage on the new REST surface lands.
fail_under = 60
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",
]
show_missing = true
skip_covered = false
precision = 1

[tool.pytest_dotenv]
env_files = [".env"]

[dependency-groups]
dev = [
    "inline-snapshot[black]>=0.32.5",
]
